@@ -1,3 +1,8 @@
+2009-04-04  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/39519
+	* gfortran.dg/alloc_comp_assign_9.f90: New test.
+
 2009-04-02  David Ayers  <ayers@fsfe.org>
 
 	PR objc/18456
